commment issue fixed, job page spacing added

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -771,3 +771,13 @@ html.js fieldset.collapsed{
 	}
 	
 }
+
+
+.section-current-vacancies{
+  .posts-columns{
+    margin-top: 290px;
+    .field_salary{
+      margin-bottom:20px;
+    }
+  }
+}
